adding db and mock endpoints
